--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1"
   },
