--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {},
   "scripts": {
